--- a/src/App.css
+++ b/src/App.css
@@ -5,15 +5,13 @@
 }
 .bottom-nav {
   width: 100%;
-  height: 20%;
-  max-height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
   bottom: 0;
-  border-top: 1px solid rgb(230, 230, 230);
 }
+
 .bn-tab {
   width: 25%;
   height: 100%;
@@ -25,7 +23,7 @@
 .bn-tab p
 {
   text-align: center;
-  font-size: small;
+  font-size: 3vh;
   font-weight: bold;
 }
 .add
@@ -47,6 +45,7 @@
   display: flex;
   flex-direction: column;
   align-content: space-between;
+  width:100%;
 }
 .row
 {
