--- a/src/App.css
+++ b/src/App.css
@@ -42,16 +42,17 @@
 .main-content
 {
   margin-top: 24px;
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
   width:100%;
+  display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .row
 {
   margin-left: 0px;
   margin-right: 0px;
   margin-top: 20px;
+  flex:1;
 }
 .time-container
 {
